// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TcpDuplexConnection when receiving data when buffer contains a single frame deserializes received frames and calls the configured handler 1`] = `
Object {
  "data": Object {
    "data": Array [
      104,
      101,
      108,
      108,
      111,
      32,
      119,
      111,
      114,
      108,
      100,
    ],
    "type": "Buffer",
  },
  "dataMimeType": "application/octet-stream",
  "flags": 256,
  "keepAlive": 60000,
  "lifetime": 300000,
  "majorVersion": 1,
  "metadata": Object {
    "data": Array [
      104,
      101,
      108,
      108,
      111,
      32,
      119,
      111,
      114,
      108,
      100,
    ],
    "type": "Buffer",
  },
  "metadataMimeType": "application/octet-stream",
  "minorVersion": 0,
  "resumeToken": null,
  "streamId": 0,
  "type": 1,
}
`;

exports[`TcpDuplexConnection when receiving data when buffer contains multiple frames deserializes received frames and calls the configured handler for each frame 1`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        104,
        101,
        108,
        108,
        111,
        32,
        119,
        111,
        114,
        108,
        100,
      ],
      "type": "Buffer",
    },
    "flags": 32,
    "metadata": null,
    "streamId": 0,
    "type": 10,
  },
]
`;

exports[`TcpDuplexConnection when receiving data when buffer contains multiple frames deserializes received frames and calls the configured handler for each frame 2`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        104,
        101,
        108,
        108,
        111,
        32,
        119,
        111,
        114,
        108,
        100,
        32,
        50,
      ],
      "type": "Buffer",
    },
    "flags": 32,
    "metadata": null,
    "streamId": 0,
    "type": 10,
  },
]
`;
